# py-trading-agent

./: .env  hash.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  deps.py  main.py  models.py
app/agents/: expert_agent.py
app/core/: security.py
app/routers/: admin.py  auth.py  chat.py
app/schemas/: admin.py  auth.py
